--- a/pokemon_details.html
+++ b/pokemon_details.html
@@ -19,28 +19,18 @@
 
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="./assets/css/global.css">
-    <link rel="stylesheet" href="./assets/css/pokedex.css">
+    <link rel="stylesheet" href="./assets/css/pokemon-detail.css">
+
+    <!-- Icon -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
-<body>
-    <section class="content contentDetail">
-        <h1>Pokedex</h1>
-
-        <ol id="pokemonList" class="pokemons">
-            <!-- ..... Pokemons here ..... -->
-        </ol>
-
-        <div class="pagination">
-            <button id="loadMoreButton" type="button">
-                Load More
-            </button>
-        </div>
-    </section>
-
+<body id="pokemonDetails">
+    
     <!-- Nosso JS -->
     <script src="./assets/js/pokemon-model.js"></script>
     <script src="./assets/js/poke-api.js"></script>
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/pokemon-details.js"></script>
 </body>
 
 </html>
