--- a/pokemon_details.html
+++ b/pokemon_details.html
@@ -25,12 +25,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
-<body id="pokemonDetails">
+<body>
+    <div id="pokemonDetailsContainer"></div>
     
     <!-- Nosso JS -->
     <script src="./assets/js/pokemon-model.js"></script>
     <script src="./assets/js/poke-api.js"></script>
-    <script src="./assets/js/pokemon-details.js"></script>
+    <script src="./assets/js/poke-details-api.js"></script>
+    <script src="./assets/js/main-details.js"></script>
 </body>
 
 </html>
