--- a/pokemon_details.html
+++ b/pokemon_details.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <div id="pokemonDetailsContainer"></div>
+    <div id="pokemonDetails"></div>
     
     <!-- Nosso JS -->
     <script src="./assets/js/pokemon-model.js"></script>
