Finalizando projeto da Pokedex

--- a/pokemon-detail.html
+++ b/pokemon-detail.html
@@ -31,8 +31,8 @@
     <!-- Nosso JS -->
     <script src="./assets/js/pokemon-model.js"></script>
     <script src="./assets/js/poke-api.js"></script>
-    <script src="./assets/js/poke-details-api.js"></script>
-    <script src="./assets/js/main-details.js"></script>
+    <script src="./assets/js/poke-detail-api.js"></script>
+    <script src="./assets/js/main-detail.js"></script>
 </body>
 
 </html>
